# python-enterprise-starter

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: analytics_workflow.json
src/enterprise_starter/: __init__.py  __main__.py
src/enterprise_starter/application/: dsl.py  engine.py  operations.py  plugins.py  worker.py
src/enterprise_starter/domain/: events.py  exceptions.py  models.py
src/enterprise_starter/infrastructure/: cache.py  event_bus.py  live_events.py  persistence.py  tracing.py
src/enterprise_starter/interfaces/: cli.py  http_api.py  web_ui.py
src/enterprise_starter/plugins/: builtin.py
tests/: __init__.py
tests/e2e/: test_demo_workflow.py
tests/integration/: test_event_stream.py  test_http_api.py
tests/unit/: test_dsl.py  test_engine.py  test_persistence_and_plugins.py  test_queue_priority.py  test_queue_retry.py  test_queue_worker.py  test_tracing.py
