[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-enterprise-starter"
version = "0.1.0"
description = "A deeply structured asynchronous workflow engine for complex Python systems."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
keywords = ["asyncio", "dag", "workflow", "orchestration", "architecture"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
workflow-demo = "enterprise_starter.interfaces.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["enterprise_starter"]

